# factorylink

./: .env.example  .gitignore  README.md  Requirements.txt  main.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
app/: auth_jwt.py
app/models/: Models.py  database.py
app/routers/: admin.py  auth.py  manufacturer.py  supplier.py
app/static/css/: style.css
app/templates/: admin_dashboard.html  base.html  index.html  manufacturer_dashboard.html  supplier_dashboard.html
