[project]
name = "factorylink"
version = "1.0.0"
description = "FactoryLink - African Raw Material Marketplace"
requires-python = "==3.12.*"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.30",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "jinja2==3.1.4",
    "python-decouple==3.8",
    "psycopg2-binary==2.9.11",
    "bcrypt==4.0.1",
]
